--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@ wandb/
 __pycache__/
 .idea/
 *.log
+decision_transformer/training/__pycache__/trainer.cpython-38.pyc
+decision_transformer/training/__pycache__/seq_trainer.cpython-38.pyc
+decision_transformer/training/__pycache__/act_trainer.cpython-38.pyc
+decision_transformer/models/__pycache__/trajectory_gpt2.cpython-38.pyc
+decision_transformer/models/__pycache__/model.cpython-38.pyc
+decision_transformer/models/__pycache__/mlp_bc.cpython-38.pyc
+decision_transformer/models/__pycache__/decision_transformer.cpython-38.pyc
+decision_transformer/evaluation/__pycache__/evaluate_episodes.cpython-38.pyc
+decision_transformer/evaluation/__pycache__/evaluate_episodes.cpython-38.pyc
+decision_transformer/models/__pycache__/decision_transformer.cpython-38.pyc
+decision_transformer/models/__pycache__/mlp_bc.cpython-38.pyc
+decision_transformer/models/__pycache__/model.cpython-38.pyc
+decision_transformer/models/__pycache__/trajectory_gpt2.cpython-38.pyc
+decision_transformer/training/__pycache__/act_trainer.cpython-38.pyc
+decision_transformer/training/__pycache__/seq_trainer.cpython-38.pyc
+decision_transformer/training/__pycache__/trainer.cpython-38.pyc
+AgentDDPG/test_data.pkl
+AgentDDPG/eval_data.csv
